--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html>
 <head>
 	<title>WELCOME!</title>
-	<link rel="icon" type="image/x-icon" href="C:\Users\wps-1\Videos\OIP.jpeg" />
 	<body style="background-color: navajowhite;font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">
 	
 </head>
 <body style="font-family: Arial, sans-serif;color: grey;">
 	<h1 style= "text-align: center;font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">Welcome!</h1>
-	<p style="color: black; font-size: 30px;"><i>This Websites Is Made by ChatGPT 3.5</p>
+	<p style="color: black; font-size: 30px;"><i>This Websites Is Made by 可樂貓,QWQ</p>
 	<button onclick="openweb()" style="color: rgb(255, 0, 0); font-family: Arial, Helvetica, sans-serif;font-size: 20px;">Open another website!(Google Sites)</button>
 	<button style="color: rgb(255, 0, 0); font-family: Arial, Helvetica, sans-serif;font-size: 20px;"><a href="Compare.html">Go to Next Page</a></button>
 
