--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	<h1 style= "text-align: center;font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">Welcome!</h1>
 	<p style="color: black; font-size: 30px;"><i>This Websites Is Made by 可樂貓,QWQ</p>
 	<button onclick="openweb()" style="color: rgb(255, 0, 0); font-family: Arial, Helvetica, sans-serif;font-size: 20px;">Open another website!(Google Sites)</button>
-	<button style="color: rgb(255, 0, 0); font-family: Arial, Helvetica, sans-serif;font-size: 20px;"><a href="Compare.html">Go to Next Page</a></button>
-
+	<button style="color: rgb(255, 0, 0); font-family: Arial, Helvetica, sans-serif;font-size: 20px;"><a href="Compare.html">Go to COMPARE</a></button>
+ 	<button style="color: rgb(255, 0, 0); font-family: Arial, Helvetica, sans-serif;font-size: 20px;"><a href="cc.html">Go to Calculator</a></button>
 	<script>
 		function openweb()
 		{
